--- a/WebContent/views/desktop/gestion/ayudas/estudioSocioEconomico/EstudioSocioEconomicoFormBasic.zul
+++ b/WebContent/views/desktop/gestion/ayudas/estudioSocioEconomico/EstudioSocioEconomicoFormBasic.zul
@@ -6,8 +6,177 @@
 				
 				
 				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="titulo_solicitud" class="active">
+						Titulo Solicitud Ayuda:
+					</n:label>
+					<textbox id="titulo_solicitud" type="text"
+						value="@bind(vm.solicitudAyuda.titulo)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="beneficiario_solicitud" class="active">
+						Nombre Beneficiario Solicitud Ayuda:
+					</n:label>
+					<textbox id="beneficiario_solicitud" type="text"
+						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkPersona.nombre)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="beneficiario2_solicitud" class="active">
+						Apellido Beneficiario Solicitud Ayuda:
+					</n:label>
+					<textbox id="beneficiario2_solicitud" type="text"
+						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkPersona.apellido)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="beneficiario3_solicitud" class="active">
+						Documento de Identificacion Beneficiario Solicitud Ayuda:
+					</n:label>
+					<textbox id="beneficiario3_solicitud" type="text"
+						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkPersona.identificacion)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
 				
 				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="familiar_solicitud" class="active">
+						Nombre Familiar Solicitud Ayuda:
+					</n:label>
+					<textbox id="familiar_solicitud" type="text"
+						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.nombre)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="familiar2_solicitud" class="active">
+						Apellido Familiar Solicitud Ayuda:
+					</n:label>
+					<textbox id="familiar2_solicitud" type="text"
+						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.apellido)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="familiar3_solicitud" class="active">
+						Documento de Identificacion Familiar Solicitud Ayuda:
+					</n:label>
+					<textbox id="familiar3_solicitud" type="text"
+						value="@bind(vm.solicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.identificacion)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="ayuda_solicitud" class="active">
+						Ayuda Solicitada:
+					</n:label>
+					<textbox id="ayuda_solicitud" type="text"
+						value="@bind(vm.solicitudAyuda.fkAyuda.nombre)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="ayuda2_solicitud" class="active">
+						Urgencia Solicitud:
+					</n:label>
+					<textbox id="ayuda2_solicitud" type="text"
+						value="@bind(vm.solicitudAyuda.urgenciaEnum)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="ayuda3_solicitud" class="active">
+						Estatus Solicitud:
+					</n:label>
+					<textbox id="ayuda3_solicitud" type="text"
+						value="@bind(vm.solicitudAyuda.estatusSolicitudEnum)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="evaluador_solicitud" class="active">
+						Nombre de Evaluador:
+					</n:label>
+					<textbox id="evaluador_solicitud" type="text"
+						value="@bind(vm.trabajador.fkPersona.nombre)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="evaluador2_solicitud" class="active">
+						Apellido de Evaluador:
+					</n:label>
+					<textbox id="evaluador2_solicitud" type="text"
+						value="@bind(vm.trabajador.fkPersona.apellido)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="evaluador3_solicitud" class="active">
+						Identificacion de Evaluador:
+					</n:label>
+					<textbox id="evaluador3_solicitud" type="text"
+						value="@bind(vm.trabajador.fkPersona.identificacion)" disabled="true">
+					</textbox>
+					</div>
+
+				</div>
+				
+				<!-- Propio de estudio Socio economico -->
 				<div class="row">
 
 					<div class="input-field col s12">
@@ -22,20 +191,7 @@
 
 				</div>
 				
-				<!-- 
-				<div class="row">
-					<div class="input-field col s12">
-						<n:label for="resultado">Resultado</n:label>
-						<span
-							sclass="fa fa-question-circle fa-lg help-icon-special"
-							tooltip="pop_direccion, position=after_end" />
-						<textbox id="resultado" type="text"
-							sclass="materialize-textarea" multiline="true"
-							value="@bind(vm.estudioSocioEconomico.resultado)">
-						</textbox>
-					</div>
-				</div>
-				 -->
+				
 				
 				
 
