--- a/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/selectFamiliar.zul
+++ b/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/selectFamiliar.zul
@@ -13,9 +13,9 @@
 		</div>
 		<div width="100%">
 
-			<div class="row">
-				<div class="col s12">
-					<div class="col s12">
+			<div style="overflow: auto;" class="row">
+			<div class="col s12">
+				<div class="col s12" style="overflow: scroll;">
 						<listbox id="listbox"
 							model="@load(vm.objectsList)"
 							selectedItem="@bind(vm.selectedObject)">
@@ -23,11 +23,11 @@
 
 							<listhead sizable="true">
 					
-							<listheader width="20%" label="Nombre de Representante" />
-							<listheader width="20%" label="Apellido de Representante" />
-							<listheader width="12%" label="Identificacion" />
-							<listheader width="12%" label="Telefono" />
-							<listheader width="12%" label="Correo" />
+							<listheader width="250px" label="Nombre de Representante" />
+							<listheader width="250px" label="Apellido de Representante" />
+							<listheader width="250px" label="Identificacion" />
+							<listheader width="250px" label="Telefono" />
+							<listheader width="250px" label="Correo" />
 							
 						
 							</listhead>
