--- a/WebContent/views/desktop/gestion/ayudas/evaluacionSolicitud/selectSolicitudAyuda.zul
+++ b/WebContent/views/desktop/gestion/ayudas/evaluacionSolicitud/selectSolicitudAyuda.zul
@@ -13,40 +13,52 @@
 		</div>
 		<div width="100%">
 
-			<div class="row">
-				<div class="col s12">
-					<div class="col s12">
+			<div style="overflow: auto;" class="row">
+			<div class="col s12">
+				<div class="col s12" style="overflow: scroll;">
 						<listbox id="listbox"
 							model="@load(vm.objectsList)"
 							selectedItem="@bind(vm.selectedObject)">
 
 
 							<listhead sizable="true">
-							<listheader width="15%" label="Titulo de Solicitud" />
-							<listheader width="20%" label="Estatus de Solicitud" />
-							<listheader width="20%" label="Nombre de Beneficiario" />
-							<listheader width="20%" label="Apellido de Beneficiario" />
-							<!-- <listheader width="20%" label="Nombre de Representante" />
-							<listheader width="20%" label="Apellido de Representante" />  -->
-							<listheader width="10%" label="Urgencia" />
-							<listheader width="10%" label="Fecha" />
+							<listheader width="250px" label="Titulo de Solicitud" />
+							<listheader width="250px" label="Estatus de Solicitud" />
+							<listheader width="250px" label="Nombre de Beneficiario" />
+							<listheader width="250px" label="Apellido de Beneficiario" />
+							<listheader width="250px" label="Identificacion de Beneficiario" />
+							
+							 
+							<listheader width="250px" label="Nombre de Representante" />
+							<listheader width="250px" label="Apellido de Representante" />
+							<listheader width="250px" label="Identificacion de Representante" />
+							
+							<listheader width="250px" label="Ayuda Solicitada" />
+							<listheader width="150px" label="Urgencia" />
+							<listheader width="150px" label="Fecha" />
 							</listhead>
 							<template name="model">
 								<listitem>
+									<listcell
+										label="@load(each.fkSolicitudAyuda.titulo)" />
+										<listcell label="@load(each.fkSolicitudAyuda.estatusSolicitudEnum)" />
+								<listcell label="@load(each.fkSolicitudAyuda.fkBeneficiario.fkPersona.nombre)" />
+								<listcell label="@load(each.fkSolicitudAyuda.fkBeneficiario.fkPersona.apellido)" />
+								<listcell label="@load(each.fkSolicitudAyuda.fkBeneficiario.fkPersona.identificacion)" />
 								
-								<listcell label="@load(each.titulo)" />		
-								<listcell label="@load(each.estatusSolicitudEnum)" />
-								<listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />
-								<listcell label="@load(each.fkBeneficiario.fkPersona.apellido)" />
-								<!-- <listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />
-								<listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />  -->
-								<listcell label="@load(each.urgenciaEnum)" />
-								<listcell label="${m:convertirLongATimestamp(each.fecha)}" />  
+								
+								<listcell label="@load(each.fkSolicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.nombre)" />
+								<listcell label="@load(each.fkSolicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.apellido)" />
+								<listcell label="@load(each.fkSolicitudAyuda.fkBeneficiario.fkFamiliar.fkPersona.identificacion)" />
+								 
+								<listcell label="@load(each.fkSolicitudAyuda.fkAyuda.nombre)" />
+								<listcell label="@load(each.fkSolicitudAyuda.urgenciaEnum)" />
+								<listcell label="${m:convertirLongATimestamp(each.fkSolicitudAyuda.fecha)}" />  
 									
 								</listitem>
 							</template>
 							<listfoot>
-								<listfooter id="listFoot" span="5"
+								<listfooter id="listFoot" span="11"
 									use="karen.core.listfoot.ListFoot">
 								</listfooter>
 							</listfoot>
