--- a/WebContent/views/desktop/gestion/trabajoSocial/ejecucion/cierreTrabajoSocial/CierreTrabajoSocialIndex.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/ejecucion/cierreTrabajoSocial/CierreTrabajoSocialIndex.zul
@@ -1,3 +1,9 @@
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
+
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div class="wizard ${arg.animation_}"
 		use="karen.core.wizard.controllers.C_WindowWizard"
@@ -9,7 +15,7 @@
 			</div>
 
 			<div sclass="col s12">
-				<include id="include" ></include>
+				<include id="include"></include>
 			</div>
 
 		</div>
