--- a/WebContent/views/desktop/gestion/trabajoSocial/ejecucion/cierreTrabajoSocial/registroCierreTrabajoSocial.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/ejecucion/cierreTrabajoSocial/registroCierreTrabajoSocial.zul
@@ -1,28 +1,11 @@
 <zk xmlns:n="native" xmlns:w="client">
 	<style>
-		.line-evento{ width: 100%; background-color: #D9EB52; height:
-		20px; margin-top: 20px; }
-
-		.titulo-evento{ color: #f26b7a !important; line-height: 28px;
-		text-align: center; font-size: 18px; text-transform: capitalize;
-		display: inherit; }
-
-
-		.subtitulo-evento{ color: #3b85a1 !important; line-height: 45px;
-		text-align: center; font-size: 18px; text-transform: capitalize;
-		display: inherit;}
-
-		.descripcion-evento { color: #8d7a6f !important; line-height:
-		18px; text-align: justify; font-size: 13px; display: inherit;
-		text-indent: 14px; }
-
-		.info-titulo-evento{ color:#3b85a1 !important; font-weight: 600;
-		font-size: 14px;}
-
-
-		.info-descripcion-evento{ color:#8d7a6f; font-size: 14px;}
-
-
+		.z-datebox input, .z-datebox input:disabled,
+		.z-datebox-input:focus, .z-datebox-input:active{ font-size:
+		1.2em !important; text-align: center; height: 1.5em !important;
+		border: 1px solid #999999; border-radius: 7px; font-size: 1em
+		!important; text-align: center; width: 93%; background: #f2fca5
+		!important;}
 	</style>
 	<div sclass="animated fadeInLeft">
 		<div sclass="row">
@@ -135,19 +118,23 @@
 		</div>
 		<div class="row" visible="@bind(!vm.estatus)">
 			<div sclass="col s12">
-			<div class="input-field col s11">
-				<n:label for="Motivo" class="active">Motivo:</n:label>
-				<textbox id="lugar" type="text" disabled="true"
-					value="@bind(vm.selectedObject.fkMotivo.descripcion)">
-				</textbox>
-			</div>
-			<div class="input-field col s1" style="font-size: 2em;">
-				<button sclass="teal lighten-1 waves-effect waves-light"
-					onClick="@command('buscarMotivo')" iconSclass="fa fa-search"
-					style="padding: 5px 15px; background-color: #2AA4EF !important">
-				</button>
+				<div class="input-field col s11">
+					<n:label for="Motivo" class="active">
+						Motivo:
+					</n:label>
+					<textbox id="lugar" type="text" disabled="true"
+						value="@bind(vm.selectedObject.fkMotivo.descripcion)">
+					</textbox>
+				</div>
+				<div class="input-field col s1"
+					style="font-size: 2em;">
+					<button
+						sclass="teal lighten-1 waves-effect waves-light"
+						onClick="@command('buscarMotivo')" iconSclass="fa fa-search"
+						style="padding: 5px 15px; background-color: #2AA4EF !important">
+					</button>
 
-			</div>
+				</div>
 			</div>
 			<div sclass="col s12">
 				<div class="input-field col s11">
@@ -165,21 +152,24 @@
 					<n:label for="nombre" class="active">
 						Fecha de Planificada
 					</n:label>
-					<datebox format="dd/MM/yyyy" value="@bind(vm.fechaPlanificada)" disabled="true"></datebox>
+					<datebox format="dd/MM/yyyy"
+						value="@bind(vm.fechaPlanificada)" disabled="true">
+					</datebox>
 				</div>
 				<div class="input-field offset-s1 col s4">
 					<n:label for="nombre" class="active">
 						Fecha de Ejecución
 					</n:label>
-					<datebox format="dd/MM/yyyy" value="@bind(vm.fechaEjecucion)"></datebox>
+					<datebox format="dd/MM/yyyy"
+						value="@bind(vm.fechaEjecucion)">
+					</datebox>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col s12" align="center"
 					style="margin-bottom: 15px;">
-					<label
-						value="Complete la información del evento"
+					<label value="Complete la información del evento"
 						sclass="label-medium-500">
 					</label>
 				</div>
@@ -190,40 +180,40 @@
 				<div class="col s12">
 
 					<listbox height="300px"
-					emptyMessage="No hay indicadores asociados al evento."
-					model="@bind(vm.indicadorEventoPlanificado)">
-					<listhead sizable="true">
-						<listheader label="Indicador"  />
-						<listheader label="Unidad de Medida" />
-						<listheader label="Valor Esperado"
-							align="center" />
+						emptyMessage="No hay indicadores asociados al evento."
+						model="@bind(vm.indicadorEventoPlanificado)">
+						<listhead sizable="true">
+							<listheader label="Indicador" />
+							<listheader label="Unidad de Medida" />
+							<listheader label="Valor Esperado"
+								align="center" />
 							<listheader label="Valor Real"
-							align="center" />
-					</listhead>
-					<template name="model">
-						<listitem>
-							<listcell
-								label="@load(each.fkIndicador.nombre)">
-							</listcell>
-							<listcell
-								label="@load(each.fkIndicador.fkUnidadMedida.nombre)">
-							</listcell>
+								align="center" />
+						</listhead>
+						<template name="model">
+							<listitem>
+								<listcell
+									label="@load(each.fkIndicador.nombre)">
+								</listcell>
+								<listcell
+									label="@load(each.fkIndicador.fkUnidadMedida.nombre)">
+								</listcell>
 
-							<listcell>
-								<intbox
-									style="    height: 1em; border: 1px solid #999999; border-radius: 7px; font-size:1.2em;  text-align: center;"
-									value="@bind(each.valorEsperado)" disabled="true">
-								</intbox>
-							</listcell>
-							<listcell>
-								<intbox
-									style="    height: 1em; border: 1px solid #999999; border-radius: 7px; font-size:1.2em;  text-align: center;"
-									value="@bind(each.valorReal)">
-								</intbox>
-							</listcell>
-						</listitem>
-					</template>
-				</listbox>
+								<listcell>
+									<intbox
+										style="    height: 1em; border: 1px solid #999999; border-radius: 7px; font-size:1.2em;  text-align: center;"
+										value="@bind(each.valorEsperado)" disabled="true">
+									</intbox>
+								</listcell>
+								<listcell>
+									<intbox
+										style="    height: 1em; border: 1px solid #999999; border-radius: 7px; font-size:1.2em;  text-align: center;"
+										value="@bind(each.valorReal)">
+									</intbox>
+								</listcell>
+							</listitem>
+						</template>
+					</listbox>
 				</div>
 			</div>
 		</div>
