--- a/WebContent/views/desktop/gestion/trabajoSocial/ejecucion/cierreTrabajoSocial/selectTrabajoSocialPlanificado.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/ejecucion/cierreTrabajoSocial/selectTrabajoSocialPlanificado.zul
@@ -1,9 +1,12 @@
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el evento a planificar"
+				<label value="Seleccione el trabajo social a planificar"
 					sclass="label-medium-500">
 				</label>
 			</div>
@@ -16,30 +19,32 @@
 					<div class="col s12">
 						<listbox id="listbox"
 							model="@load(vm.objectsList)"
+							emptyMessage="No hay Trabajos Sociales Planificados"
 							selectedItem="@bind(vm.selectedObject)">
 
-							<listhead sizable="true">
+							<listhead>
 								<listheader width="20%" label="Nombre" />
 								<listheader width="20%"
 									label="Descripción" />
-								<listheader width="20%"
-									label="Fecha Planificada" />
-								<listheader width="20%" label="Lugar" />
-								<listheader width="20%"
+								<listheader width="15%"
+									label="Fecha Inicio" />
+								<listheader width="15%"
+									label="Fecha Fin" />
+								<listheader width="15%"
 									label="Coordinador" />
 							</listhead>
 							<template name="model">
 								<listitem>
 									<listcell
-										label="@load(each.fkEvento.nombre)" />
+										label="@load(each.fkTrabajoSocial.nombre)" />
 									<listcell
-										label="@load(each.fkEvento.descripcion)" />
+										label="@load(each.fkTrabajoSocial.descripcion)" />
 									<listcell
-										label="@load(each.fechaPlanificada)" />
+										label="${m:convertirLongADate(each.fechaInicio)}" />
 									<listcell
-										label="@load(each.fkDirectorio.nombre)" />
+										label="${m:convertirLongADate(each.fechaFin)}" />
 									<listcell
-										label="@load(each.fkPersona.nombre)" />
+										label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
 								</listitem>
 							</template>
 							<listfoot>
